fix(runbotics-orchestrator-ui): :bug: Fix DateRange overflow
Overflowing was happening on blog page on Firefox browser

--- a/runbotics/runbotics-orchestrator-ui/src/src-landing/components/DateRange/DateRange.module.scss
+++ b/runbotics/runbotics-orchestrator-ui/src/src-landing/components/DateRange/DateRange.module.scss
@@ -5,14 +5,13 @@
     grid-template-columns: auto 1fr auto;
     align-items: center;
     justify-items: center;
-
     max-width: calc($BLOG_FILTERS_WIDTH - 10px);
 
     gap: 5px;
 }
 
 .wrapper > input {
-    width: 100%;
+    width: calc(($BLOG_FILTERS_WIDTH - 30px)/2);
     padding: 5px;
     border-radius: 5px;
     border: 1px solid $palette-gray;
@@ -51,5 +50,8 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+    }
+    .wrapper > input {
+    width: 100%;
     }
 }
